--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.4",
     "mongoose": "^7.2.0",
     "node-cron": "^3.0.2",
+    "randomatic": "^3.1.1",
     "telegraf": "^4.12.2",
     "telegraf-i18n": "^6.6.0",
     "telegraf-pagination": "^1.4.1",
